--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,68 +1,59 @@
 es:
-  #title_product: Editar producto
-
   activerecord:
     models:
+      product: Producto
+    attributes:
       product:
-        one: Producto
-        other: Productos
-    attributes: 
-      product:
-        title: Título
-        description: Descripción
-        price: Precio
-        photo: Foto 
-
+        title: 'Título'
+        description: 'Descripción'
+        price: 'Precio'
+        photo: 'Foto'
     errors:
       models:
         product:
           attributes:
             title:
-              blank: El título no puede estar en blanco
+              blank: 'no puede estar vacío'
             description:
-              blank: La descripción no puede estar en blanco
+              blank: 'no puede estar vacía'
             price:
-              blank: El precio no puede estar vacio
-            photo:
-              blank: La foto no puede estar en blanco
-
+              blank: 'no puede estar vacío'
   common:
-    confirm: ¿Estás seguro?
-    back: Volver
-  products:
-    edit:
-      title: Editar producto
-    new:
-      title: Nuevo producto
-    index:
-      title: Productos
-
-    create:
-      created: 'Tú producto se ha creado correctamente'
-    update:
-      updated: 'Tú producto se ha actualizado correctamente' 
-    destroy:
-      destroyed: 'Tú producto se ha eliminado correctamente' 
-
-  categories:
-    category:
-      edit: Editar
-      delete: Borrar
-    index:
-      title: Categorías
-      new: Añadir categoría
-    edit:
-      title: Editar categoría
-    create:
-      created: 'La catewgoría se ha creado correctamente'
-    update:
-      updated: 'La categoria se ha actualizado correctamente'
-    destroy:
-      destroyed: 'La categoría se ha eliminado correctamente'
-    new:
-      title: Añadir categoría
-  
+    confirm: '¿Estás seguro?'
+    back: 'Volver'
   shared:
     header:
-      add:  Añadir producto
-      categories: Categorías
+      add: 'Añadir producto'
+  products:
+    edit:
+      title: 'Editar producto'
+    new:
+      title: 'Añadir producto'
+    index:
+      title: 'Productos:'
+    show:
+      edit: 'Editar producto'
+      delete: 'Borrar producto'
+    create:
+      created: 'Tu producto se ha creado correctamente'
+    update:
+      updated: 'Tu producto se ha actualizado correctamente'
+    destroy:
+      destroyed: 'Tu producto se ha eliminado correctamente'
+  categories:
+    category:
+      edit: 'Editar'
+      delete: 'Borrar'
+    index:
+      title: 'Categorías'
+      new: 'Añadir categoría'
+    edit:
+      title: 'Editar categoría'
+    create:
+      created: 'Tu categoría se ha creado correctamente'
+    update:
+      updated: 'Tu categoría se ha actualizado correctamente'
+    destroy:
+      destroyed: 'Tu categoría se ha eliminado correctamente'
+    new:
+      title: 'Añadir categoría'
