Hasta video 28 ordenando productos, refactorización y traducciones de ordenamiento

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,10 @@ en:
       all: 'All'
       min_price: 'Min price'
       max_price: 'Max price'
+      query_text: 'Whath do you want to search?'
+      newest: "Recently added"
+      expensive: "Expensive first"
+      cheapest: "Cheaper first"
     show:
       edit: 'Edit product'
       delete: 'Delete product'
