--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -34,6 +34,10 @@ es:
       all: 'Todos'
       min_price: 'Precio mínimo'
       max_price: 'Precio máximo'
+      query_text: 'Qué quieres buscar?'
+      newest: "Más caro"
+      expensive: "Más barato"
+      cheapest: "Añadidos recientemente"
     show:
       edit: 'Editar producto'
       delete: 'Borrar producto'
