--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,11 @@ en:
   shared:
     header:
       add: 'Add product'
+  authentication:
+    users:
+      create:
+        created: 'Your account has been successfully created'
+      
   products:
     edit:
       title: 'Edit product'
