--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -26,6 +26,10 @@ es:
   shared:
     header:
       add: 'Añadir producto'
+  authentication:
+    users:
+      create:
+        created: 'Tu cuenta se ha creado correctamente'
   products:
     edit:
       title: 'Editar producto'
