--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,7 +30,10 @@ en:
     users:
       create:
         created: 'Your account has been successfully created'
-      
+    sessions:
+      create:
+        created: 'Welcome!'
+        failed: 'Invalid login or password'
   products:
     edit:
       title: 'Edit product'
