--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -30,6 +30,10 @@ es:
     users:
       create:
         created: 'Tu cuenta se ha creado correctamente'
+    sessions:
+      create:
+        created: 'Bienvenido!'
+        failed: 'Usuario y/o contraseña inválidos'
   products:
     edit:
       title: 'Editar producto'
