--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,7 @@ en:
   common:
     confirm: 'Are you sure?'
     back: 'Go back'
+    not_logged_id: 'You need to be logged in to access this page'
   shared:
     header:
       add: 'Add product'
