--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -4,12 +4,20 @@ es:
   activerecord:
     models:
       product: Producto
+      user: Usuario
+      category: Categoría
     attributes:
       product:
         title: 'Título'
         description: 'Descripción'
         price: 'Precio'
         photo: 'Foto'
+      user:
+        email: 'Correo electrónico'
+        username: 'Usuario'
+        password: 'Contraseña'
+      category:
+        name: 'Nombre'
     errors:
       models:
         product:
@@ -27,6 +35,9 @@ es:
   shared:
     header:
       add: 'Añadir producto'
+      login: 'Login'
+      register: 'Registro'
+      logout: 'Logout'
   authentication:
     users:
       create:
@@ -35,6 +46,8 @@ es:
       create:
         created: 'Bienvenido!'
         failed: 'Usuario y/o contraseña inválidos'
+      destroy:
+        destroyed: 'Sesión finalizada. Hasta la próxima!'
   products:
     edit:
       title: 'Editar producto'
