--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
     confirm: 'Are you sure?'
     back: 'Go back'
     not_logged_id: 'You need to be logged in to access this page'
+    not_autorized: 'You do not have permission for this action'
   shared:
     header:
       add: 'Add product'
