--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -40,6 +40,7 @@ es:
       login: 'Login'
       register: 'Registro'
       logout: 'Logout'
+      favorites: 'Mis favoritos'
   authentication:
     users:
       create:
@@ -91,3 +92,6 @@ es:
       destroyed: 'Tu categoría se ha eliminado correctamente'
     new:
       title: 'Añadir categoría'
+  favorites:
+    index:
+      title: 'Mis favoritos'
